// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connection initalization 1`] = `"dynamo db connection is not initialized"`;

exports[`convertTradeToSchema 1`] = `
Object {
  "amount": Object {
    "N": "456",
  },
  "id": Object {
    "S": "id",
  },
  "price": Object {
    "N": "123",
  },
  "systime": Object {
    "N": "123",
  },
  "timestamp": Object {
    "N": "1234567890",
  },
}
`;

exports[`convertTradeToSchema 2`] = `
Object {
  "price": Object {
    "N": "123",
  },
  "timestamp": Object {
    "N": "1234567890",
  },
  "volume": Object {
    "N": "456",
  },
}
`;

exports[`insertHeartbeat 1`] = `
Object {
  "Item": Object {
    "process": Object {
      "S": "UNKNOWN",
    },
    "timestamp": Object {
      "N": "0",
    },
  },
  "TableName": "status_dev",
}
`;

exports[`insertStatusData 1`] = `
Object {
  "Item": Object {
    "process": Object {
      "S": "UNKNOWN",
    },
    "test": "test",
  },
  "TableName": "status_dev",
}
`;

exports[`insertTradeData 1`] = `
Object {
  "Item": Object {
    "amount": Object {
      "N": "456",
    },
    "id": Object {
      "S": "id",
    },
    "price": Object {
      "N": "123",
    },
    "sourceDate": Object {
      "S": "src|1970-01-15",
    },
    "systime": Object {
      "N": "0",
    },
    "timestamp": Object {
      "N": "1234567890",
    },
  },
  "TableName": "trades_dev",
}
`;

exports[`insertTradeData 2`] = `
Object {
  "Item": Object {
    "amount": Object {
      "N": "456",
    },
    "id": Object {
      "S": "id",
    },
    "price": Object {
      "N": "123",
    },
    "process": Object {
      "S": "UNKNOWN",
    },
    "systime": Object {
      "N": "0",
    },
    "timestamp": Object {
      "N": "1234567890",
    },
  },
  "TableName": "status_dev",
}
`;
